--- a/ecolex/static/bootstrap/less/search.less
+++ b/ecolex/static/bootstrap/less/search.less
@@ -10,6 +10,7 @@ input[type=text]::-ms-reveal {
   height: 0;
 }
 
+
 input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-results-button, input[type="search"]::-webkit-search-results-decoration {
   display: none;
 }
@@ -170,6 +171,24 @@ input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-s
 }
 
 @media only screen and (max-width:@screen-sm) {
+
+
+#results{
+  display:none;
+}
+.shown{
+display:inline!important;
+}
+
+  #layout-main .mobile-wrapperx .badge{
+    position:relative;
+    top:-1px;
+    bottom:0;
+    right:0;
+  }
+
+
+
   .search-form {
     @inset: 5px;
     @label-width: @indent;
